--- a/index.html
+++ b/index.html
@@ -5,8 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer-Gear</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1285926584.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <!-- header start -->
+    <header>
+        <div class="header">
+            <div class="nav-bar">
+                <div class="logo">
+                    <h2>Influencer products</h2>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">products</a></li>
+                        <li><a href="#">sign up</a></li>
+                        <li><a href="#">login</a></li>
+                        <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                        <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="banner">
+                <div class="banner-text">
+                    <h1>
+                        Start your Journey as 
+                        Influencer
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.
+                    </p>
+                    <button>Preebook now <i class="fa-solid fa-arrow-right-long"></i></button>
+                </div>
+                <div class="banner-image">
+                    <img class="absulute" src="images/main-camera.png" alt="banner">
+                    <img src="images/Circle design.svg" alt="banner">
+                </div>
+            </div>
+        </div>
+    </header>
+
     
 </body>
 </html>
